# ai4qz

./: .gitignore  AGENT.md  README.md  pyproject.toml
configs/: notebooks.minimal.yaml  notebooks.yaml
cookies/: README.md
har/: README.md
src/ai4qz/: cli.py  config.py  cookies.py  discovery.py  jupyter.py  models.py  session_store.py  tui.py
tests/: test_tmux_detection.py  test_tui_cursor.py  test_tui_input.py  test_tui_status.py  test_upload_download_cli.py
