[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4qz"
version = "0.1.0"
description = "Control qz notebooks over Jupyter terminals and contents APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.32.0",
  "websocket-client>=1.8.0",
  "pyte>=0.8.0",
  "urwid>=2.1.0",
]

[project.scripts]
ai4qz = "ai4qz.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
